--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,8 +18,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint astroid
+        pip install pylint astroid pytest pytest-cov
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
     - name: Analysing the code with pylint
       run: pylint $(git ls-files '*.py')
+    - name: Run tests
+      run: pytest --cov=. --cov-report=term-missing:skip-covered --cov-fail-under=50
