--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,9 +18,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint astroid pytest pytest-cov
+        pip install pylint astroid pytest pytest-cov black
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+    - name: Check formatting with black
+      run: black --check .
     - name: Analysing the code with pylint
       run: pylint $(git ls-files '*.py')
     - name: Run tests
