--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,21 @@ services:
       context: .
       dockerfile: Dockerfile
     working_dir: /app
+    env_file:
+      - .env
     environment:
-      - PYTHONPATH=/app
-      - TZ=America/New_York
-      - PYTHONUNBUFFERED=1
+      PYTHONPATH: /app
+      TZ: ${TZ:-UTC}
+      PYTHONUNBUFFERED: 1
     ports:
       - 8010:8000
     volumes:
-      - ./logs:/app/logs
-      - ./cache:/app/cache
-      - ./user_data:/app/user_data
-      - /mnt/Games/pilotsettings/settings.json:/app/settings.json:rw
+      - ${LOGS_DIR:-./logs}:/app/logs
+      - ${CACHE_DIR:-./cache}:/app/cache
+      - ${USER_DATA_DIR:-./user_data}:/app/user_data
+      - ${SETTINGS_PATH:-./settings.json}:/app/settings.json:rw
       - ./data:/data # Ensures /data/.cache-spotify is persisted
-      - /mnt/Movies-And-More/Music:/Movies/Music
+      - ${MUSIC_DIR:-/mnt/Movies-And-More/Music}:/Movies/Music
     restart: unless-stopped
     healthcheck:
       test:
