--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,8 +21,8 @@ jobs:
         pip install pylint astroid pytest pytest-cov black
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
-    - name: Check formatting with black
-      run: black --check .
+    - name: Format code with black
+      run: black .
     - name: Analysing the code with pylint
       run: pylint $(git ls-files '*.py')
     - name: Run tests
