docs: clarify settings file path

--- a/env.example
+++ b/env.example
@@ -8,6 +8,8 @@ LOGS_DIR=./logs
 CACHE_DIR=./cache
 USER_DATA_DIR=./user_data
 # Path to your settings file
+# The file must exist or Docker will create a directory instead of a file
+# which prevents the app from loading settings
 SETTINGS_PATH=/path/to/settings.json
 # Location of your music library
 MUSIC_DIR=/mnt/Music
